[project]
name = "mcp-security-audit"
version = "0.1.0"
description = "Static security analyzer for MCP servers based on OWASP MCP Top 10"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Daniel Gottwald"}]
keywords = ["mcp", "security", "audit", "owasp", "static-analysis"]
dependencies = ["mcp>=1.0.0"]

[project.scripts]
mcp-security-audit = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
